# RunOn

./: .cursorrules  .env.example  .gitignore  PRIVACY_POLICY.md  PROJECT_GOAL.md  README.md  TERMS_OF_SERVICE.md  build.gradle.kts  sonar-project.properties
.github/: dependabot.yml
backend/: .flake8  README.md  coveragerc  format_and_lint.sh  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
backend/.github/workflows/: ci.yml  deploy.yml  infrastructure.yml  security.yml  sonarcloud.yml
backend/cache/: decorators.py  redis_client.py
backend/config/: __init__.py  environment.py  pyproject.toml  settings.py
backend/db/: optimizations.py
backend/docs/: ANDROID_INTEGRATION.md  BACKEND_PROJECT_ALIGNMENT.md  LOCAL_ENV_TESTING.md  __init__.py  environment.md  openapi.yaml
backend/functions/: __init__.py
backend/functions/auth/: __init__.py  auth.py
backend/functions/calendar_sync/: __init__.py  calendar.py  main.py
backend/functions/event_discovery/: __init__.py  main.py  search.py
backend/functions/user_management/: auth.py  function.yaml  main.py  models.py
backend/infrastructure/: __init__.py
backend/infrastructure/terraform/: main.tf  outputs.tf  variables.tf
backend/models/: __init__.py  event.py
backend/monitoring/: __init__.py  logger.py  metrics.py
backend/scripts/: cleanup_env.sh  format_and_lint.sh  run_local.sh  setup.sh
backend/security/: __init__.py  config.py  jwt_manager.py  middleware.py  rate_limiter.py
backend/tests/: __init__.py  conftest.py  test_basic.py  test_conftest.py  test_main.py
(+120 files in other folders)
