[tool.poetry]
name = "runon-backend"
version = "0.1.0"
description = "Backend services for RunOn! running event discovery platform"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
pydantic = "^2.10.5"
google-cloud-firestore = "^2.3.4"
google-cloud-functions = "^1.4.0"
opencensus-ext-stackdriver = "^0.8.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^25.1"
isort = "^5.9.3"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
